@@ -6,7 +6,7 @@
 
   <groupId>io.github.dkamx.fearless</groupId>
   <artifactId>Fearless-LanguageServer</artifactId>
-  <version>0.0.1</version>
+  <version>0.1.0</version>
 
   <build>
     <plugins>
@@ -54,6 +54,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
